# bezier-nd-rs

./: .gitignore  Cargo.toml  README.md  RELEASES.md  constants.py  exp.py  play.py  roots.py  trig.py
src/: approximation.rs  bezier.rs  bezier_fns.rs  bezier_iter.rs  builder.rs  constants.rs  constants_table.rs  curve.rs  distance.rs  error.rs  farray_cubic.rs  farray_line.rs  farray_quadratic.rs  farrays.rs  flattened.rs  fvec.rs  int_n.rs  lazy_constants.rs  lib.rs  lib_doc.md  line.rs  metrics.rs  point.rs  polynomial.rs  traits.rs  utils.rs
src/bernstein/: accessors.rs  bezier.rs  bezier_fns.rs  constructors.rs  evaluation.rs  manipulation.rs  metrics.rs  mod.rs  split.rs
src/bernstein_fns/: arc.rs  coeffs.rs  de_casteljau.rs  distance.rs  elevate_matrix.rs  elevate_reduce_matrix.rs  metrics.rs  mod.rs  split.rs  transform.rs  values.rs
src/bezier_iter/: beziers.rs  lines.rs  mod.rs  points.rs  split.rs
src/bignum/: int_n.rs  mod.rs  rational_n.rs  uint_n.rs
src/fixed_point/: arith_code.rs  binary.rs  binary_ops.rs  consts.rs  extra_num_traits.rs  fixed.rs  fixed_point_i32_i16.rs  fp_impls.rs  fp_type.rs  functions.rs  mod.rs  nt_casts.rs  nt_checked.rs  nt_float.rs  nt_float_const.rs  nt_num.rs  nt_num_ops.rs  nt_overflowing.rs  nt_saturating.rs  (+9 more)
tests/: approximation.rs  arc.rs  bezier.rs  bezier_ops.rs  bignum.rs  bignum_tests.rs  build.rs  constants.rs  constants_table.rs  cubic.rs  derivative.rs  distance.rs  distance_to.rs  elevate.rs  iterators.rs  line.rs  metrics.rs  polynomial.rs  quadratic.rs  reduce.rs  split.rs  straightness.rs  utils.rs
(+47 files in other folders)
